--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "npm start",
     "start": "ts-node -r tsconfig-paths/register src/index",
-    "develop": "nodemon -r tsconfig-paths/register ./src/index.ts"
+    "develop": "nodemon -r tsconfig-paths/register ./src/index.ts",
+    "serve": "pm2 start build/index.js",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "pm2": "^5.2.2"
   }
 }
