--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
-    // "importHelpers": true,
+    "importHelpers": true,
     "jsx": "react",
     "alwaysStrict": true,
     "sourceMap": true,
