--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm start",
     "start": "ts-node -r tsconfig-paths/register src/index",
     "develop": "nodemon -r tsconfig-paths/register ./src/index.ts",
-    "serve": "pm2 start build/index.js",
-    "build": "tsc --build",
+    "serve": "pm2 start  build/index.js",
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./build",
     "clean": "tsc --build --clean"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.1",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.9.4"
   },
   "dependencies": {
